# homekit-ratgdo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  partitions_hap.csv  platformio.ini  sdkconfig.defaults
components/secplus/: CMakeLists.txt
docs/: manifest.json
docs/firmware/: homekit-ratgdo-v2.1.4.md5
lib/ratgdo/: Packet.h  Reader.h  log.h
main/: app_main.c
src/: CMakeLists.txt  MD5Builder.cpp  MD5Builder.h  comms.cpp  comms.h  config.cpp  config.h  homekit.cpp  homekit.h  homekit_decl.c  homekit_decl.h  led.cpp  led.h  log.cpp  log.h  ratgdo.cpp  ratgdo.h  softuart.cpp  softuart.h  utilities.cpp  utilities.h  web.cpp  wifi.cpp  wifi.h
src/include/: json.h  tasks.h
src/www/: functions.js  index.html  style.css
